# TwoStepBranchingProcedure

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_windows.yml
data/input/BPP-Subproblems/: 173e0w100h100n21dx-25-50-100_19_24_35dy-25-50-100_12_23_32t300.json  173e0w100h100n22dx-25-50-100_16_23_35dy-25-50-100_9_23_32t300.json  173e0w100h100n24dx-25-50-100_16_19_35dy-25-50-100_12_20_34t300.json  173e0w100h100n25dx-25-50-100_17_20_35dy-25-50-100_12_17_34t300.json  173e0w100h100n26dx-25-50-100_15_19_35dy-25-50-100_9_16_34t300.json  173e0w100h100n26dx-25-50-100_15_20_35dy-25-50-100_9_15_32t300.json  173e0w100h100n27dx-25-50-100_15_19_35dy-25-50-100_8_15_34t300.json  173e0w100h100n35dx-25-50-100_13_17_34dy-25-50-100_11_15_34t300.json  173e0w100h100n36dx-25-50-100_13_16_34dy-25-50-100_11_15_34t300.json  173e1w100h100n20dx-25-50-100_19_24_35dy-25-50-100_14_23_32t300.json  173e1w100h100n22dx-25-50-100_17_20_35dy-25-50-100_13_23_34t300.json  173e1w100h100n23dx-25-50-100_17_20_35dy-25-50-100_13_23_34t300.json  173e1w100h100n24dx-25-50-100_16_19_35dy-25-50-100_11_20_34t300.json  173e1w100h100n24dx-25-50-100_17_20_35dy-25-50-100_11_20_34t300.json  173e1w100h100n25dx-25-50-100_15_19_35dy-25-50-100_9_17_34t300.json  173e1w100h100n25dx-25-50-100_17_20_35dy-25-50-100_9_17_34t300.json  173e1w100h100n26dx-25-50-100_15_19_35dy-25-50-100_7_16_34t300.json  173e1w100h100n33dx-25-50-100_14_17_34dy-25-50-100_13_17_34t300.json  173e1w100h100n34dx-25-50-100_13_16_34dy-25-50-100_12_16_34t300.json  173e1w100h100n35dx-25-50-100_13_16_35dy-25-50-100_10_15_34t300.json  173e1w100h100n35dx-25-50-100_13_17_34dy-25-50-100_11_15_34t300.json  173e1w100h100n36dx-25-50-100_12_16_35dy-25-50-100_9_14_34t300.json  173e1w100h100n36dx-25-50-100_13_16_34dy-25-50-100_10_15_34t300.json  173e1w100h100n37dx-25-50-100_13_16_34dy-25-50-100_9_15_34t300.json  173e2w100h100n31dx-25-50-100_13_17_34dy-25-50-100_13_19_34t300.json  173e2w100h100n32dx-25-50-100_13_17_34dy-25-50-100_13_18_34t300.json  173e2w100h100n33dx-25-50-100_14_17_34dy-25-50-100_12_17_34t300.json  173e2w100h100n34dx-25-50-100_13_16_34dy-25-50-100_11_16_34t300.json  173e2w100h100n38dx-25-50-100_13_16_35dy-25-50-100_11_13_34t300.json  173e2w100h100n39dx-25-50-100_12_16_35dy-25-50-100_10_13_34t300.json  173e3w100h100n30dx-25-50-100_14_17_34dy-25-50-100_13_19_34t300.json  173e3w100h100n32dx-25-50-100_13_17_34dy-25-50-100_12_18_34t300.json  173e4w100h100n29dx-25-50-100_14_18_34dy-25-50-100_13_19_34t300.json  174e0w100h100n34dx-25-50-100_13_20_35dy-25-50-100_10_18_29t300.json  174e1w100h100n32dx-25-50-100_15_20_35dy-25-50-100_11_20_29t300.json  174e1w100h100n33dx-25-50-100_15_20_35dy-25-50-100_10_20_29t300.json  174e1w100h100n40dx-25-50-100_11_18_35dy-25-50-100_9_19_32t300.json  174e1w100h100n41dx-25-50-100_11_19_35dy-25-50-100_9_18_32t300.json  174e1w100h100n42dx-25-50-100_11_18_35dy-25-50-100_7_17_32t300.json  174e1w100h100n43dx-25-50-100_11_19_35dy-25-50-100_6_16_32t300.json  (+281 more)
data/input/CJCM08/: E00N10.json  E00N15.json  E00N23.json  E00X23.json  E02F17.json  E02F20.json  E02F22.json  E02N20.json  E03N10.json  E03N15.json  E03N16.json  E03N17.json  E03X18.json  E04F15.json  E04F17.json  E04F19.json  E04F20.json  E04N15.json  E04N17.json  E04N18.json  E05F15.json  E05F18.json  E05F20.json  E05N15.json  E05N17.json  E05X15.json  E07F15.json  E07N10.json  E07N15.json  E07X15.json  E08F15.json  E08N15.json  E10N10.json  E10N15.json  E10X15.json  E13N10.json  E13N15.json  E13X15.json  E15N10.json  E15N15.json  (+2 more)
data/input/MSB-450_Unibo/: OPP_2D_10_2s_10I_0W.json  OPP_2D_10_2s_10I_10W.json  OPP_2D_10_2s_10I_20W.json  OPP_2D_10_2s_10I_2W.json  OPP_2D_10_2s_10I_30W.json  OPP_2D_10_2s_10I_40W.json  OPP_2D_10_2s_10I_4W.json  OPP_2D_10_2s_10I_6W.json  OPP_2D_10_2s_10I_8W.json  OPP_2D_10_2s_1I_0W.json  OPP_2D_10_2s_1I_10W.json  OPP_2D_10_2s_1I_20W.json  OPP_2D_10_2s_1I_2W.json  OPP_2D_10_2s_1I_30W.json  OPP_2D_10_2s_1I_40W.json  OPP_2D_10_2s_1I_4W.json  OPP_2D_10_2s_1I_6W.json  OPP_2D_10_2s_1I_8W.json  OPP_2D_10_2s_2I_0W.json  OPP_2D_10_2s_2I_10W.json  OPP_2D_10_2s_2I_20W.json  OPP_2D_10_2s_2I_2W.json  OPP_2D_10_2s_2I_30W.json  OPP_2D_10_2s_2I_40W.json  OPP_2D_10_2s_2I_4W.json  OPP_2D_10_2s_2I_6W.json  OPP_2D_10_2s_2I_8W.json  OPP_2D_10_2s_3I_0W.json  OPP_2D_10_2s_3I_10W.json  OPP_2D_10_2s_3I_20W.json  OPP_2D_10_2s_3I_2W.json  OPP_2D_10_2s_3I_30W.json  OPP_2D_10_2s_3I_40W.json  OPP_2D_10_2s_3I_4W.json  OPP_2D_10_2s_3I_6W.json  OPP_2D_10_2s_3I_8W.json  OPP_2D_10_2s_4I_0W.json  OPP_2D_10_2s_4I_10W.json  OPP_2D_10_2s_4I_20W.json  OPP_2D_10_2s_4I_2W.json  (+410 more)
data/input/MSB-630_Unibo/: OPP_2D_20_1s_10I_0W.json  OPP_2D_20_1s_10I_10W.json  OPP_2D_20_1s_10I_12W.json  OPP_2D_20_1s_10I_14W.json  OPP_2D_20_1s_10I_16W.json  OPP_2D_20_1s_10I_18W.json  OPP_2D_20_1s_10I_20W.json  OPP_2D_20_1s_10I_22W.json  OPP_2D_20_1s_10I_24W.json  OPP_2D_20_1s_10I_26W.json  OPP_2D_20_1s_10I_28W.json  OPP_2D_20_1s_10I_2W.json  OPP_2D_20_1s_10I_30W.json  OPP_2D_20_1s_10I_32W.json  OPP_2D_20_1s_1I_0W.json  (+615 more)
scripts/: Bench.py  Convert.py  VisualizeSolution.py
tests/: CMakeLists.txt  PlacementLMAO.cpp  Preprocess.cpp  main.cpp
tsbp/: CMakeLists.txt
tsbp-cli/: CMakeLists.txt
tsbp-cli/src/: tsbp-cli.cpp
tsbp/include/tsbp/: BranchAndBound.h  Model.h  OrthogonalPackingSolver2D.h  Preprocess.h  Serialization.h
tsbp/src/: BranchAndBound.cpp  Model.cpp  OrthogonalPackingSolver2D.cpp  Preprocess.cpp  Serialization.cpp
